# LLMagentic

./: README.md  read_docs.py
health-coverage-ai/backend/: Dockerfile  alembic.ini  pyproject.toml  requirements.txt
health-coverage-ai/backend/alembic/: env.py
health-coverage-ai/backend/alembic/versions/: d8f24a01d6ad_initial_schema.py
health-coverage-ai/backend/app/: main.py
health-coverage-ai/backend/app/ai/agents/: coverage_agent.py
health-coverage-ai/backend/app/ai/parsers/: docx_parser.py
health-coverage-ai/backend/app/ai/prompts/: coverage_prompts.py
health-coverage-ai/backend/app/ai/providers/: base_provider.py  openai_provider.py
health-coverage-ai/backend/app/ai/rag/: retriever.py
health-coverage-ai/backend/app/ai/vectorstore/: chroma_client.py
health-coverage-ai/backend/app/api/: deps.py
health-coverage-ai/backend/app/api/v1/: affiliates.py  coverage_analysis.py  documents.py  router.py  suggestions.py  (+1 more)
health-coverage-ai/backend/app/bootstrap/: ingest_documents.py  rebuild_vectorstore.py  reset_database.py  seed_affiliates.py
health-coverage-ai/backend/app/config/: development.py  production.py  settings.py  testing.py
health-coverage-ai/backend/app/core/: database.py  exceptions.py  logging.py
health-coverage-ai/backend/app/repositories/: affiliate_repository.py  consultation_repository.py
health-coverage-ai/backend/app/services/: affiliate_service.py  coverage_analysis_service.py  document_service.py  suggestion_service.py
health-coverage-ai/backend/tests/: test_api_contract.py  test_docx_parser.py  test_suggestion_service.py
(+59 files in other folders)
