[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "health-coverage-ai-backend"
version = "1.0.0"
description = "Health Coverage AI Assistant — Backend API"
requires-python = ">=3.12"
dependencies = [
    # ── Sprint 1: Core infrastructure ────────────────────────────
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "pydantic[email]>=2.10.0",
    "pydantic-settings>=2.7.0",
    "structlog>=24.4.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
# ── Sprint 2: Document ingestion + Vector store ───────────────────
docs = [
    "python-docx>=1.1.0",
    "openpyxl>=3.1.0",
    "chromadb>=0.6.0",
]
# ── Sprint 3: AI / LangChain / LangGraph ─────────────────────────
ai = [
    "openai>=1.57.0",
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "langgraph>=0.2.0",
    "tiktoken>=0.8.0",
]
# ── Development & Testing ─────────────────────────────────────────
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.28.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
